GroupTests : Add even more tests for the Group class.